force-app/main/default/objects/Temporal_Cursos_Niveles__c/Temporal_Cursos_Niveles__c.object-meta.xml
<CustomObject>
    <description>Tabla Temporal Cursos Niveles de la BBDD</description>
    <label>Temporal Curso Nivel</label>
    <nameField>
        <label>Temporal Curso Nivel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Cursos Niveles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>