force-app/main/default/objects/Temporal_Cursos_Niveles__c/fields/CN_ABIERTO__c.field-meta.xml
<CustomField>
    <fullName>CN_ABIERTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CN_ABIERTO</label>
    <type>Checkbox</type>
</CustomField>