force-app/main/default/objects/Temporal_Cursos_Niveles__c/fields/CN_ANO__c.field-meta.xml
<CustomField>
    <fullName>CN_ANO__c</fullName>
    <label>CN_ANO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>