force-app/main/default/objects/Temporal_Cursos_Niveles__c/fields/CN_CURSO__c.field-meta.xml
<CustomField>
    <fullName>CN_CURSO__c</fullName>
    <label>CN_CURSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>