force-app/main/default/objects/Temporal_Cursos_Niveles__c/fields/CN_NIVEL__c.field-meta.xml
<CustomField>
    <fullName>CN_NIVEL__c</fullName>
    <label>CN_NIVEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>