force-app/main/default/objects/Temporal_Cursos_Niveles__c/fields/CN_PLAZAS__c.field-meta.xml
<CustomField>
    <fullName>CN_PLAZAS__c</fullName>
    <label>CN_PLAZAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>