force-app/main/default/objects/Temporal_Cursos_Niveles__c/fields/CN_PRECIO__c.field-meta.xml
<CustomField>
    <fullName>CN_PRECIO__c</fullName>
    <label>CN_PRECIO</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>