force-app/main/default/objects/Temporal_Cursos_Niveles__c/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <label>FM</label>
    <type>Date</type>
</CustomField>