force-app/main/default/objects/Temporal_Cursos_Niveles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>CN_ANO__c</columns>
    <columns>CN_CURSO__c</columns>
    <columns>CN_NIVEL__c</columns>
    <columns>CN_PRECIO__c</columns>
    <columns>DDDKEY__c</columns>
    <columns>P_DDDKEY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>